--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,5 @@ spring.mail.password=vvhpqvhbwwplpwgq
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mvc.view.suffix=.html
+security.basic.enable = false;
+security.ignored=/**;
